WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25666
Assertion failure in Node::setDocument() (willMoveToNewOwnerDocumentWasCalled) when adopting a <form> element
https://bugs.webkit.org/show_bug.cgi?id=25666
Summary
Assertion failure in Node::setDocument() (willMoveToNewOwnerDocumentWasCalled...
mitz
Reported
2009-05-09 21:47:34 PDT
The recently-added assertion in Node::setDocument(), willMoveToNewOwnerDocumentWasCalled, fails when adopting a <form> element. To reproduce, open the attached test case.
Attachments
Test case (will ASSERT)
(180 bytes, text/html)
2009-05-09 21:47 PDT
,
mitz
no flags
Details
Make HTMLFormElement call the base class implementation of {will,did}MoveToNewOwnerDocument
(3.60 KB, patch)
2009-05-09 22:00 PDT
,
mitz
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2009-05-09 21:47:54 PDT
Created
attachment 30159
[details]
Test case (will ASSERT)
mitz
Comment 2
2009-05-09 22:00:47 PDT
Created
attachment 30160
[details]
Make HTMLFormElement call the base class implementation of {will,did}MoveToNewOwnerDocument
Geoffrey Garen
Comment 3
2009-05-09 22:03:04 PDT
Comment on
attachment 30160
[details]
Make HTMLFormElement call the base class implementation of {will,did}MoveToNewOwnerDocument r=me
mitz
Comment 4
2009-05-09 22:05:26 PDT
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/43451
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug