WebCore:

Reviewed by Geoffrey Garen and Mark Rowe.

        - fix https://bugs.webkit.org/show_bug.cgi?id=25666
          Assertion failure in Node::setDocument()
          (willMoveToNewOwnerDocumentWasCalled) when adopting a <form> element

        Test: fast/dom/HTMLFormElement/adopt-assertion.html

        * html/HTMLFormElement.cpp:
        (WebCore::HTMLFormElement::willMoveToNewOwnerDocument): Overrides of
        this method are required to call the base class implementation. Do it.
        (WebCore::HTMLFormElement::didMoveToNewOwnerDocument): Ditto.

LayoutTests:

        Reviewed by Geoffrey Garen and Mark Rowe.

        - test for https://bugs.webkit.org/show_bug.cgi?id=25666
          Assertion failure in Node::setDocument()
          (willMoveToNewOwnerDocumentWasCalled) when adopting a <form> element

        * fast/dom/HTMLFormElement/adopt-assertion-expected.txt: Added.
        * fast/dom/HTMLFormElement/adopt-assertion.html: Added.



Canonical link: https://commits.webkit.org/35460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43451 268f45cc-cd09-0410-ab3c-d52691b4dbfc