WebCore/html/HTMLFormElement.cpp
@@ -628,12 +628,14 @@ void HTMLFormElement::willMoveToNewOwnerDocument()
 {
     if (!m_autocomplete)
         document()->unregisterForDocumentActivationCallbacks(this);
+    HTMLElement::willMoveToNewOwnerDocument();
 }
 
 void HTMLFormElement::didMoveToNewOwnerDocument()
 {
     if(m_autocomplete)
         document()->registerForDocumentActivationCallbacks(this);
+    HTMLElement::didMoveToNewOwnerDocument();
 }
 
 } // namespace
